modif jenkins file add sonar16